moved single to single-project, 404, various fixes

--- a/assets/css/sass/blocks/_lists.scss
+++ b/assets/css/sass/blocks/_lists.scss
@@ -7,10 +7,8 @@
     }
 }
 .list-item {
-    &+& {
-        margin-top: $leading/4;
-    }
-    .timeline & {
+    .timeline &,
+    .social & {
         @extend .h6;
     }
 }
