--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -773,7 +773,7 @@ html {
   padding-left: 6rem;
   padding-right: 6rem; }
 
-.u-py-6 {
+.u-py-6, .module {
   padding-top: 6rem;
   padding-bottom: 6rem; }
 
@@ -1152,8 +1152,7 @@ dfn, cite, em, i {
 
 blockquote {
   font-family: "GT-America-Extended-Black", Arial, sans-serif;
-  text-transform: none;
-  margin: 2rem 0; }
+  text-transform: none; }
   blockquote p {
     margin: 0; }
 
@@ -1407,6 +1406,11 @@ figure {
   -moz-flex-basis: 31.76%;
   flex-basis: 31.76%;
   -ms-flex-preferred-size: 31.76%; }
+
+.post-image {
+  height: 0;
+  padding-bottom: 60%;
+  background-size: cover; }
 
 @media screen and (min-width: 768px) {
   .post-meta {
