--- a/assets/css/sass/blocks/_section.scss
+++ b/assets/css/sass/blocks/_section.scss
@@ -1,9 +1,15 @@
 .section-content {
     .has-sidebar & {
+        flex: 0 1 flex-grid(8,$grid-columns);
         @extend .u-pb-6;
         @include media($md) {
             order: 0;
-            flex: 0 1 flex-grid(8,$grid-columns)!important; // testing flex-grid layout
         }
+    }
+    .content & {
+        flex: 0 1 flex-grid(9,$grid-columns);
+    }
+    .section:last-of-type & {
+        @extend .u-mb-6;
     }
 }
