--- a/assets/css/sass/blocks/_post.scss
+++ b/assets/css/sass/blocks/_post.scss
@@ -1,4 +1,5 @@
 .post-image {
+    width: 100%;
     height: 0;
     padding-bottom: 60%;
     @extend .u-mb-4;
@@ -17,10 +18,6 @@
 .post-content {
     @include media($md) {
         order: 0;
-    }
-    padding-right: flex-grid(2,$grid-columns);
-    .sidebar + & {
-        @extend .u-pr-6;
     }
 }
 .post-content--expanded {
