extended media support

--- a/assets/css/sass/blocks/_masthead.scss
+++ b/assets/css/sass/blocks/_masthead.scss
@@ -1,4 +1,8 @@
 .masthead {
     position: sticky; // testing intended behaviour
     top: $leading * 3;
+    @extend .u-mb-2;
+    @include media($md) {
+        margin-bottom: 0;
+    }
 }
