--- a/assets/css/sass/shared/utility/_layout.scss
+++ b/assets/css/sass/shared/utility/_layout.scss
@@ -16,7 +16,10 @@
     position: relative;
 	max-width: $max-width;
 	margin: 0 auto;
-	padding: 0 $container_padding;
+	padding: 0 $leading;
+    @include media($md) {
+        padding: 0 $container_padding;
+    }
 }
 
 // Spacing
