--- a/assets/css/sass/views/_footer.scss
+++ b/assets/css/sass/views/_footer.scss
@@ -16,7 +16,7 @@
     @extend .flex;
     @include align-items(flex-end);
     border-left: none!important;
-    padding: 0;
+    padding: 0!important;
 }
 
 // Menus
